--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sides mw unit-l-centered">
 					<div class="unit unit-xs-1 unit-s-1-2 unit-m-2-3 unit-l-2-3">
 						<h1 class="white push-1-2">LEARN QUICKLY  AND EASILY.</h1>
+						<p class="white">An online language learning program for beginners of all ages.</p>
 						<a class="silver button" href="subscriptions.html">Subscription Plans</a>
 					</div>
 				</div>
@@ -80,7 +81,7 @@
 						</ol>
 					</nav>
 				</div>
-				<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+				<div class="unit unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
 					<div class="embed embed--1by1 social media__img--reversed ">
 						<img class="embed__item" src="images/logos-tw.png" alt="twitter icon">
 					</div>
