added links to social media icons

--- a/subscriptions.html
+++ b/subscriptions.html
@@ -96,16 +96,24 @@
 				</div>
 				<div class="unit unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
 					<div class="embed embed--1by1 social media__img--reversed ">
-						<img class="embed__item" src="images/logos-tw.png" alt="twitter icon">
+						<a href="http://twitter.com/">
+							<img class="embed__item" src="images/logos-tw.png" alt="twitter icon">
+						</a>
 					</div>
 					<div class="embed embed--1by1 social media__img--reversed ">
-						<img class="embed__item" src="images/logos-fb.png" alt="facebook icon">
+						<a href="http://facebook.com/">
+							<img class="embed__item" src="images/logos-fb.png" alt="facebook icon">
+						</a>
 					</div>
 					<div class="embed embed--1by1 social media__img--reversed ">
-						<img class="embed__item" src="images/logos-yt.png" alt="youtube icon">
+						<a href="http://youtube.com/">
+							<img class="embed__item" src="images/logos-yt.png" alt="youtube icon">
+						</a>
 					</div>
 					<div class="embed embed--1by1 social media__img--reversed ">
+						<a href="http://googleplus.com/">
 						<img class="embed__item" src="images/logos-gp.png" alt="google plus icon">
+						</a>
 					</div>
 				</div>
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
