--- a/subscriptions.html
+++ b/subscriptions.html
@@ -14,13 +14,17 @@
 		<link href='http://fonts.googleapis.com/css?family=Oxygen:400,700,300' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<header class="silver">
+		<ul class="skip-links">
+			<li><a href="#main">Jump to main content</a></li>
+			<li><a href="#nav">Jump to main navigation</a></li>
+		</ul>
+		<header class="silver" role="banner">
 			<div class="grid grid-middle pad-t-1-2 sides mw unit-l-centered">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-4">
-					<div class="embed embed--4by1"><a href="index.html"><img class="embed__item" src="images/logo.png" alt="SpeakEasy logo"></a></div>
+					<div class="embed embed--4by1"><a href="index.html"><img class="embed__item" src="images/logo.png" alt="SpeakEasy"></a></div>
 				</div>
 				<div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-3-4">
-					<nav>
+					<nav role="navigation" id="nav">
 						<ol class="list-group push-1-2 bold milli">
 							<li class="island-1-2"><a href="index.html">Homepage</a></li>
 							<li class="island-1-2"><a href="features.html">Features</a></li>
@@ -31,7 +35,7 @@
 				</div>
 			</div>
 		</header>
-		<main>
+		<main role="main" id="main">
 			<div class="grid pad-t-2 pad-b-2 grey">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sides mw unit-l-centered">
 					<h1 class="push-1-2">Subscriptions</h1>
@@ -97,26 +101,26 @@
 				<div class="unit unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
 					<div class="embed embed--1by1 social media__img--reversed ">
 						<a href="http://twitter.com/">
-							<img class="embed__item" src="images/logos-tw.png" alt="twitter icon">
+							<img class="embed__item" src="images/logos-tw.png" alt="twitter">
 						</a>
 					</div>
 					<div class="embed embed--1by1 social media__img--reversed ">
 						<a href="http://facebook.com/">
-							<img class="embed__item" src="images/logos-fb.png" alt="facebook icon">
+							<img class="embed__item" src="images/logos-fb.png" alt="facebook">
 						</a>
 					</div>
 					<div class="embed embed--1by1 social media__img--reversed ">
 						<a href="http://youtube.com/">
-							<img class="embed__item" src="images/logos-yt.png" alt="youtube icon">
+							<img class="embed__item" src="images/logos-yt.png" alt="youtube">
 						</a>
 					</div>
 					<div class="embed embed--1by1 social media__img--reversed ">
 						<a href="http://googleplus.com/">
-						<img class="embed__item" src="images/logos-gp.png" alt="google plus icon">
+						<img class="embed__item" src="images/logos-gp.png" alt="google plus">
 						</a>
 					</div>
 				</div>
-				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
+				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1" role="contentinfo">
 					<nav>
 						<ol class="list-group push-1-2 micro">
 							<li class="island-1-2">© 2015 SpeakEasy</li>
