--- a/index.html
+++ b/index.html
@@ -85,23 +85,23 @@
 						</ol>
 					</nav>
 				</div>
-				<div class="unit unit-xs-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
-					<div class="embed embed--1by1 social media__img--reversed ">
+				<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 footalign">
+					<div class="embed embed--1by1 social">
 						<a href="http://twitter.com/">
 							<img class="embed__item" src="images/logos-tw.png" alt="twitter">
 						</a>
 					</div>
-					<div class="embed embed--1by1 social media__img--reversed ">
+					<div class="embed embed--1by1 social">
 						<a href="http://facebook.com/">
 							<img class="embed__item" src="images/logos-fb.png" alt="facebook">
 						</a>
 					</div>
-					<div class="embed embed--1by1 social media__img--reversed ">
+					<div class="embed embed--1by1 social">
 						<a href="http://youtube.com/">
 							<img class="embed__item" src="images/logos-yt.png" alt="youtube">
 						</a>
 					</div>
-					<div class="embed embed--1by1 social media__img--reversed ">
+					<div class="embed embed--1by1 social">
 						<a href="http://googleplus.com/">
 						<img class="embed__item" src="images/logos-gp.png" alt="google plus">
 						</a>
