added labels to forms

--- a/signup.html
+++ b/signup.html
@@ -43,13 +43,16 @@
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sidesgutter mw unit-l-centered">
 					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 unit-push-m-1-4 gutter-1-2">
 						<form>
-							<input type="text" name="email" value="Email" class="input push-1-2">
-							<input type="text" name="password" value="Password" class="input push-1-2">
+							<label for="email2"></label>
+							<input type="text" id="email2" name="email" value="Email" class="input push-1-2">
+							<label for="password2"></label>
+							<input type="text" name="password" id="password2" value="Password" class="input push-1-2">
 						</form>
 						<p class="text-center push-1-2">Credit Card</p>
 						<form>
-							<input type="text" name="cardname" value="Name on Card" class="input push-1-2">
-							<input type="text" name="cardnumber" value="Card Number" class="input push-1-2">
+							<label for="cardname"></label>
+							<input type="text" id="cardname" name="cardname" value="Name on Card" class="input push-1-2">
+							<input type="text" id="cardname" name="cardnumber" value="Card Number" class="input push-1-2">
 						</form>
 						<p class="text-center push-1-2">Expiration Date</p>
 						<select class="input select push-1-2">
@@ -89,8 +92,10 @@
 					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 unit-push-m-1-4 gutter-1-2">
 						<p class="text-center push-1-2">Already a member?</p>
 						<form>
-						<input type="text" name="email" value="Email" class="input push-1-2">
-						<input type="text" name="password" value="Password" class="input push-1-2">
+							<label for="email"></label>
+							<input type="text" id="email" name="email" value="Email" class="input push-1-2">
+							<label for="password"></label>
+							<input type="text" id="password" name="password" value="Password" class="input push-1-2">
 						</form>
 						<p class="black button"><a class="white" href="index.html">Login</a></p>
 					</div>
