--- a/subscriptions.html
+++ b/subscriptions.html
@@ -78,8 +78,10 @@
 						<p class="black button push-1-2"><a class="white" href="signup.html">Create an Account</a></p>
 						<p class="text-center push-1-2">or</p>
 						<form>
-							<input type="text" name="email" value="Email" class="input push-1-2">
-							<input type="text" name="password" value="Password" class="input push-1-2">
+							<label for="email"></label>
+							<input type="text" id="email" name="email" value="Email" class="input push-1-2">
+							<label for="password"></label>
+							<input type="text" id="password" name="password" value="Password" class="input push-1-2">
 						</form>
 						<p class="black button"><a class="white" href="index.html">Login</a></p>
 					</div>
@@ -134,5 +136,6 @@
 		</footer>
 	</body>
 </html>
+
 
 
