made links distinguishable

--- a/subscriptions.html
+++ b/subscriptions.html
@@ -93,7 +93,7 @@
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
 					<nav>
 						<ol class="list-group push-1-2 milli bold">
-							<li class="island-1-2"><a href="#">About</a></li>
+							<li class="island-1-2"><a href="#">About us</a></li>
 							<li class="island-1-2"><a href="#">Jobs</a></li>
 							<li class="island-1-2"><a href="#">Press</a></li>
 							<li class="island-1-2"><a href="#">Help/FAQ</a></li>
