--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<p>SpeakEasy is a language learning service designed for anyone looking to travel and submerge in the country’s culture through language. Whether you’re planning to teach English abroad and need to get a solid foundation in the language, or you’re travelling to your dream spot and would like to be able to move around with ease. SpeakEasy will help you get there.</p>
 					</div>
 					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 unit-push-m-1-4 unit-push-l-1-4 gutter-1-2">
-						<p class="black button"><a class="white" href="features.html">Learn More</a></p>
+						<p class="black button"><a class="white" href="features.html">Take a tour</a></p>
 					</div>
 				</div>
 			</div>
@@ -80,7 +80,7 @@
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
 					<nav>
 						<ol class="list-group push-1-2 milli bold">
-							<li class="island-1-2"><a href="#">About</a></li>
+							<li class="island-1-2"><a href="#">About us</a></li>
 							<li class="island-1-2"><a href="#">Jobs</a></li>
 							<li class="island-1-2"><a href="#">Press</a></li>
 							<li class="island-1-2"><a href="#">Help/FAQ</a></li>
