--- a/signup.html
+++ b/signup.html
@@ -52,6 +52,7 @@
 						<form>
 							<label for="cardname"></label>
 							<input type="text" id="cardname" name="cardname" value="Name on Card" class="input push-1-2">
+							<label for="cardnumber"></label>
 							<input type="text" id="cardname" name="cardnumber" value="Card Number" class="input push-1-2">
 						</form>
 						<p class="text-center push-1-2">Expiration Date</p>
@@ -107,7 +108,7 @@
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
 					<nav>
 						<ol class="list-group push-1-2 milli bold">
-							<li class="island-1-2"><a href="#">About</a></li>
+							<li class="island-1-2"><a href="#">About us</a></li>
 							<li class="island-1-2"><a href="#">Jobs</a></li>
 							<li class="island-1-2"><a href="#">Press</a></li>
 							<li class="island-1-2"><a href="#">Help/FAQ</a></li>
