made unique form label

--- a/signup.html
+++ b/signup.html
@@ -50,10 +50,8 @@
 						</form>
 						<p class="text-center push-1-2">Credit Card</p>
 						<form>
-							<label for="cardname"></label>
 							<input type="text" id="cardname" name="cardname" value="Name on Card" class="input push-1-2">
-							<label for="cardnumber"></label>
-							<input type="text" id="cardname" name="cardnumber" value="Card Number" class="input push-1-2">
+							<input type="text" id="cardnumber" name="cardnumber" value="Card Number" class="input push-1-2">
 						</form>
 						<p class="text-center push-1-2">Expiration Date</p>
 						<select class="input select push-1-2">
