--- a/features.html
+++ b/features.html
@@ -29,7 +29,7 @@
 							<li class="island-1-2"><a href="index.html">Homepage</a></li>
 							<li class="island-1-2"><a href="features.html">Features</a></li>
 							<li class="island-1-2"><a href="subscriptions.html">Subscriptions</a></li>
-							<li class="island-1-2 black button normal"><a class="white" href="signup.html">Created an Account</a></li>
+							<li class="island-1-2 black button normal"><a class="white" href="signup.html">Create an Account</a></li>
 						</ol>
 					</nav>
 				</div>
