--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 		<header class="silver" role="banner">
 			<div class="grid grid-middle pad-t-1-2 sides mw unit-l-centered">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-4">
-					<div class="embed embed--4by1"><a href="index.html"><img class="embed__item" src="images/logo.png" alt="SpeakEasy"></a></div>
+					<div class="embed embed--4by1">
+						<a href="index.html">
+							<img class="embed__item" src="images/logo.png" alt="SpeakEasy">
+						</a>
+					</div>
 				</div>
 				<div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-3-4">
 					<nav role="navigation" id="nav">
@@ -29,7 +33,7 @@
 							<li class="island-1-2"><a href="index.html">Homepage</a></li>
 							<li class="island-1-2"><a href="features.html">Features</a></li>
 							<li class="island-1-2"><a href="subscriptions.html">Subscriptions</a></li>
-							<li class="island-1-2 black button normal"><a class="white" href="signup.html">Created an Account</a></li>
+							<li class="island-1-2 black button normal"><a class="white" href="signup.html">Create an Account</a></li>
 						</ol>
 					</nav>
 				</div>
