added thank you page

--- a/signup.html
+++ b/signup.html
@@ -26,7 +26,7 @@
 				<div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-3-4">
 					<nav role="navigation" id="nav">
 						<ol class="list-group push-1-2 bold milli">
-							<li class="island-1-2"><a href="index.html">Homepage</a></li>
+							<li class="island-1-2"><a href="index.html">Home</a></li>
 							<li class="island-1-2"><a href="features.html">Features</a></li>
 							<li class="island-1-2"><a href="subscriptions.html">Subscriptions</a></li>
 							<li class="island-1-2 black button normal"><a class="white" href="signup.html">Create an Account</a></li>
@@ -89,7 +89,7 @@
 							<div>
 								<button class="white black button2 kilo" type="submit">Join</button>
 							</div>
-							<input type="hidden" name"_next" value="http://kevinbmcintyre.github.io/dsn1675-saas-website/thankyou">
+							<input type="hidden" name"_next" value="http://kevinbmcintyre.github.io/dsn1675-saas-website/thankyou.html">
 						</form>
 					</div>
 				</div>
@@ -108,7 +108,7 @@
 							<div>
 								<button class="white black button2 kilo" type="submit">Login</button>
 							</div>
-							<input type="hidden" name"_next" value="http://kevinbmcintyre.github.io/dsn1675-saas-website/thankyou">
+							<input type="hidden" name"_next" value="http://kevinbmcintyre.github.io/dsn1675-saas-website/thankyou.html">
 						</form>
 					</div>
 				</div>
