--- a/thankyou.html
+++ b/thankyou.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>SpeakEasy · Home</title>
+		<title>SpeakEasy · Thank you</title>
 		<link href="css/grid.css" rel="stylesheet">
 		<link href="css/typography.css" rel="stylesheet">
 		<link href="css/modules.css" rel="stylesheet">
@@ -21,11 +21,7 @@
 		<header class="silver" role="banner">
 			<div class="grid grid-middle pad-t-1-2 sides mw unit-l-centered">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-4">
-					<div class="embed embed--4by1">
-						<a href="index.html">
-							<img class="embed__item" src="images/logo.png" alt="SpeakEasy">
-						</a>
-					</div>
+					<div class="embed embed--4by1"><a href="index.html"><img class="embed__item" src="images/logo.png" alt="SpeakEasy"></a></div>
 				</div>
 				<div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-3-4">
 					<nav role="navigation" id="nav">
@@ -40,47 +36,11 @@
 			</div>
 		</header>
 		<main role="main" id="main">
-			<div class="grid bus pad-t-2 pad-b-2">
+			<div class="grid pad-t pad-t-2 pad-b grey">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sides mw unit-l-centered">
-					<div class="unit unit-xs-1 unit-s-1-2 unit-m-2-3 unit-l-2-3">
-						<h1 class="white push-1-2">LEARN QUICKLY  AND EASILY.</h1>
-						<p class="white">An online language learning program for beginners of all ages.</p>
-						<a class="silver button" href="subscriptions.html">Subscription Plans</a>
-					</div>
+					<h1 class="push-1-2">Thank you for signing up!</h1>
+					<a href="index.html">Return to Home page</a>
 				</div>
-			</div>
-			<div class="grid pad-t-2 pad-b grey">
-				<div class="sidesgutter mw unit-l-centered">
-					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 gutter-1-2">
-						<p>The best way to learn a new language is to get out and use it. SpeakEasy provides a simple, clean and easy platform of games and activities for learning the basics for easy communication, that will quickly grow as you move along the platforms. These fun and simple activities coupled with video and live chat options, as well as tutoring services, will bring you to the level of fluency you need.</p>
-					</div>
-					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 gutter-1-2">
-						<p class="bold push-0">WHO CAN USE SPEAKEASY?</p>
-						<p>SpeakEasy is a language learning service designed for anyone looking to travel and submerge in the country’s culture through language. Whether you’re planning to teach English abroad and need to get a solid foundation in the language, or you’re travelling to your dream spot and would like to be able to move around with ease. SpeakEasy will help you get there.</p>
-					</div>
-					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 unit-push-m-1-4 unit-push-l-1-4 gutter-1-2">
-						<p class="black button"><a class="white" href="features.html">Take a tour</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="grid pad-t-2 pad-b-2 drkgrey center">
-				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sidesgutter mw unit-l-centered">
-					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 unit-push-m-1-4 gutter-1-2">
-						<p class="black button push-1-2"><a class="white" href="signup.html">Create an Account</a></p>
-						<p class="text-center push-1-2">or</p>
-						<form action="https://formspree.io/kevinmcintyre2014@gmail.com" method="post">
-							<div>
-								<input name="email" id="email" type="email" placeholder="Email" class="input push-1-2" required>
-							</div>
-							<div>
-								<input name="password" id="password" type="password" placeholder="Password" class="input push-1-2" required>
-							</div>
-							<div>
-								<button class="white black button2 kilo" type="submit">Login</button>
-							</div>
-							<input type="hidden" name"_next" value="http://kevinbmcintyre.github.io/dsn1675-saas-website/thankyou.html">
-						</form>
-					</div>
 				</div>
 			</div>
 		</main>
