started adding colours and images to the website

--- a/features.html
+++ b/features.html
@@ -53,11 +53,11 @@
 					</div>
 				</div>
 			</div>
-			<div class="grid pad-t-2 pad-b-2 drkgrey center">
+			<div class="grid castle pad-t-2 pad-b-2 drkgrey center">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sidesgutter mw unit-l-centered">
 					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 unit-push-m-1-4 gutter-1-2">
-						<p class="black button push-1-2"><a class="white" href="signup.html">Create an Account</a></p>
-						<p class="text-center push-1-2">or</p>
+						<p class="tuscany button push-1-2"><a class="white" href="signup.html">Create an Account</a></p>
+						<p class="text-center white push-1-2">or</p>
 						<form action="https://formspree.io/kevinmcintyre2014@gmail.com" method="post">
 							<div>
 								<input name="email" id="email" type="email" placeholder="Email" class="input push-1-2" required>
@@ -66,7 +66,7 @@
 								<input name="password" id="password" type="password" placeholder="Password" class="input push-1-2" required>
 							</div>
 							<div>
-								<button class="white black button2 kilo" type="submit">Login</button>
+								<button class="white tocantins button2 kilo" type="submit">Login</button>
 							</div>
 							<input type="hidden" name"_next" value="http://kevinbmcintyre.github.io/dsn1675-saas-website/thankyou.html">
 						</form>
@@ -74,7 +74,7 @@
 				</div>
 			</div>
 		</main>
-		<footer class="silver pad-t">
+		<footer class="footgrad pad-t">
 			<div class="grid pad-t-1-2 sides mw unit-l-centered">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
 					<nav>
