--- a/thankyou.html
+++ b/thankyou.html
@@ -44,7 +44,7 @@
 				</div>
 			</div>
 		</main>
-		<footer class="silver pad-t">
+		<footer class="footgrad pad-t">
 			<div class="grid pad-t-1-2 sides mw unit-l-centered">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
 					<nav>
@@ -92,3 +92,6 @@
 		</footer>
 	</body>
 </html>
+
+
+
