--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<li><a href="#main">Jump to main content</a></li>
 			<li><a href="#nav">Jump to main navigation</a></li>
 		</ul>
-		<header class="silver" role="banner">
+		<header class="whiteback" role="banner">
 			<div class="grid grid-middle pad-t-1-2 sides mw unit-l-centered">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-4">
 					<div class="embed embed--4by1">
@@ -33,41 +33,47 @@
 							<li class="island-1-2"><a href="index.html">Home</a></li>
 							<li class="island-1-2"><a href="features.html">Features</a></li>
 							<li class="island-1-2"><a href="subscriptions.html">Subscriptions</a></li>
-							<li class="island-1-2 black button normal"><a class="white" href="signup.html">Create an Account</a></li>
+							<li class="island-1-2 tuscany button normal"><a class="white" href="signup.html">Create an Account</a></li>
 						</ol>
 					</nav>
 				</div>
 			</div>
 		</header>
 		<main role="main" id="main">
-			<div class="grid bus pad-t-2 pad-b-2">
+			<div class="grid venice pad-t-2 pad-b-2">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sides mw unit-l-centered">
 					<div class="unit unit-xs-1 unit-s-1-2 unit-m-2-3 unit-l-2-3">
 						<h1 class="white push-1-2">LEARN QUICKLY  AND EASILY.</h1>
 						<p class="white">An online language learning program for beginners of all ages.</p>
-						<a class="silver button" href="subscriptions.html">Subscription Plans</a>
+						<a class="tocantins white button" href="signup.html">Sign up</a>
 					</div>
 				</div>
 			</div>
-			<div class="grid pad-t-2 pad-b grey">
+			<div class="grid pad-t-2 pad-b whiteback">
 				<div class="sidesgutter mw unit-l-centered">
-					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 gutter-1-2">
-						<p>The best way to learn a new language is to get out and use it. SpeakEasy provides a simple, clean and easy platform of games and activities for learning the basics for easy communication, that will quickly grow as you move along the platforms. These fun and simple activities coupled with video and live chat options, as well as tutoring services, will bring you to the level of fluency you need.</p>
+					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 gutter-1-2 text-center">
+						<div class="embed embed--1by1">
+							<a href="features.html">
+								<img class="embed__item" src="images/bubblebadge.png" alt="Feature badge">
+							</a>
+						</div>
+						<a href="features.html">Features</a>
 					</div>
-					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 gutter-1-2">
-						<p class="bold push-0">WHO CAN USE SPEAKEASY?</p>
-						<p>SpeakEasy is a language learning service designed for anyone looking to travel and submerge in the country’s culture through language. Whether you’re planning to teach English abroad and need to get a solid foundation in the language, or you’re travelling to your dream spot and would like to be able to move around with ease. SpeakEasy will help you get there.</p>
-					</div>
-					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 unit-push-m-1-4 unit-push-l-1-4 gutter-1-2">
-						<p class="black button"><a class="white" href="features.html">Take a tour</a></p>
+					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 gutter-1-2 text-center">
+						<div class="embed embed--1by1">
+							<a href="subscriptions.html">
+								<img class="embed__item" src="images/personbadge.png" alt="Subscription badge">
+							</a>
+						</div>
+						<a href="subscriptions.html">Subscriptions</a>
 					</div>
 				</div>
 			</div>
-			<div class="grid pad-t-2 pad-b-2 drkgrey center">
+			<div class="grid castle pad-t-2 pad-b-2 drkgrey center">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 sidesgutter mw unit-l-centered">
 					<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2 unit-push-m-1-4 gutter-1-2">
-						<p class="black button push-1-2"><a class="white" href="signup.html">Create an Account</a></p>
-						<p class="text-center push-1-2">or</p>
+						<p class="tuscany button push-1-2"><a class="white" href="signup.html">Create an Account</a></p>
+						<p class="text-center white push-1-2">or</p>
 						<form action="https://formspree.io/kevinmcintyre2014@gmail.com" method="post">
 							<div>
 								<input name="email" id="email" type="email" placeholder="Email" class="input push-1-2" required>
@@ -76,7 +82,7 @@
 								<input name="password" id="password" type="password" placeholder="Password" class="input push-1-2" required>
 							</div>
 							<div>
-								<button class="white black button2 kilo" type="submit">Login</button>
+								<button class="white tocantins button2 kilo" type="submit">Login</button>
 							</div>
 							<input type="hidden" name"_next" value="http://kevinbmcintyre.github.io/dsn1675-saas-website/thankyou.html">
 						</form>
@@ -84,7 +90,7 @@
 				</div>
 			</div>
 		</main>
-		<footer class="silver pad-t">
+		<footer class="footgrad pad-t">
 			<div class="grid pad-t-1-2 sides mw unit-l-centered">
 				<div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
 					<nav>
